used more efficient Short.valueOf()